:lipstick: planet hover effect & responsive design

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -91,7 +91,9 @@ import DialogBox from 'assets/dialog-box.astro'
 			</button>
 		</div>
 		<div class='relative h-[100lvh] w-full'>
-			<PlanetLandscape className='absolute w-full -bottom-8' />
+			<div class='absolute bottom-0 w-full'>
+				<PlanetLandscape className='w-[1000px] h-[450px] -ml-[95%] md:ml-0 md:w-full md:h-auto' />
+			</div>
 		</div>
 	</div>
 
