--- a/src/assets/landscape.astro
+++ b/src/assets/landscape.astro
@@ -9,7 +9,7 @@ const {className} = Astro.props
 <svg
 	xmlns='http://www.w3.org/2000/svg'
 	xmlns:xlink='http://www.w3.org/1999/xlink'
-	viewBox='23 0 1000 500'
+	viewBox='23 50 1000 450'
 	class={className}
 >
 	<defs>
@@ -824,7 +824,11 @@ const {className} = Astro.props
 		>
 			<path fill='transparent' d='M22.9 0h1000v500h-1000z'></path>
 			<ellipse cx='600' cy='400' rx='1000' ry='400' fill='url(#sphere-bg)'></ellipse>
-			<g id='stone-right' transform='translate(100, 20)' fill-rule='evenodd'>
+			<g
+				id='stone-right'
+				class='[transform:translate(48px,72px)] md:[transform:translate(180px,20px)]'
+				fill-rule='evenodd'
+			>
 				<g id='stone-rm'>
 					<path
 						fill='url(#Áåçûìÿííûé_ãðàäèåíò_320)'
@@ -875,6 +879,98 @@ const {className} = Astro.props
 						transform='translate(22.9)'></path>
 				</g>
 			</g>
+			<g id='stone-left' class='[transform:translate(180px,-40px)] md:[transform:translate(0)]'>
+				<g id='stone-6' fill-rule='evenodd'>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_354)'
+						d='M105 297.2s-1 16.9 0 23.9c0 0 1.4 4 7.6 5.8v13.5s10.7 2.4 14.3-1.5 19-45.3 19-45.3l-18.6 2Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_214)'
+						d='M105 297.2s13-1 15.3-2.4l4.4-2.2 21.1 1a64 64 0 0 1-5.7 3.6c-2.8 1.5-16.1 2.4-21.8 2s-13.3-2-13.3-2Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_377)'
+						d='m105 321 6.7 1.3 3.6-1.2 2.3-14.1v14l1 5.3 6.6 2.5s4.5-2 5.3-5l6.4-25.7 9-4.5s-11.7 33.7-16.9 41.6l-3.9 6-11.9 2-1.5-4.3 1-12s-7.3-2-7.7-5.8Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='#a0ffed'
+						d='M143.2 294.8a77.5 77.5 0 0 0 8.3.7c2.3 0 7.2-.7 7.2-.7s-7.6-2.4-11-2.2c0 0-3.8 1-4.5 2.2Z'
+					></path>
+				</g>
+
+				<g id='stone-5' fill-rule='evenodd'>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_354-2)'
+						d='M153.8 275s-2.9 14.2-2.6 17.6 6.8 11 6.8 11 6.9 14.6 9 21.8 9.6 16.4 9.6 16.4 44.3 6.9 56.4 6.9 18.2-5.7 18.2-5.7 17.1-29.7 18.6-31.1 10-4.5 10-4.5 13.8-25 15-31.6l-38.6 1.6Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_214-2)'
+						d='m153.8 275 18.2-2.2 10.5-1.8s50 .1 64.5 1c0 0 12-4.8 15.2-5s9.6 5.8 9.6 5.8l23 3s-10.5 3.7-18.6 3.5l7.7 2.6a15 15 0 0 1-4.9 2.4c-3 1-26 1.6-36.8 1.5s-15.7-3.9-15.7-3.9l5-1.9-5.9-.7s-17.8 3.1-24.6 3.4a86.3 86.3 0 0 1-15.5-1.5l-.7-2.3s-18.4-1.1-31-3.8Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_377-2)'
+						d='M180.5 278.5v10l-10 1.6s-.5.2-1.6 3-6.2 9.9-6.2 9.9l-4.6.5 3.7 8.3s5.3.1 7.5 1.4 6.9 5.3 6.9 5.3l2.8 7.8s2.8-14.4 3-16.7 3-12 2.5-13.7.2-8 .2-8l.8-6.8s14.5 2 16 2.6 2.2 6.6 2.2 6.6l5 11.4-5.6 16.7 2.2 14.2.7 10.6 7.9 8.5h6.2l5.5-29.4c.4-1.7-1.3-5.7-1.3-5.7l2.5-17.3-.3-17.5 5-1.9-5.9-.7s-18.5 2.8-21.5 3-18.6-2.5-18.6-2.5l9.3-2.3Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_377-3)'
+						d='m260.3 285.8 12.5 2-2 4.8-5.4 13-6.5 6.2-7.3 2.7-5.7 4h4.9l-.4 5.3-2.6 12.6-.2 9 3.4-.5s13.3-24.1 18.8-33c0 0 9-2.8 10-4.5s13.7-25.7 15-31.6l-18.6 3.5 7.7 2.6a47.1 47.1 0 0 1-9 3c-3.6.5-14.6.9-14.6.9Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_258-2)'
+						d='m247 272-4 2 4.6 1.1c1.6.4 11.1-.3 12.8-.7s7.8-2.4 7.8-2.4l.3-2s-4.6-4-6-3.8-13 4.6-15.5 5.8Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_372)'
+						d='m272.4 272.9-4 2.2-6 .1h-13s10-.8 11.5-1.2l7.3-2 .3-2Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_381)'
+						d='m203.4 288.4 4.2 9.9.7-18.6 9.4-2.3-14.3 1.1v9.9z'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_381-2)'
+						d='m276.2 279.3 7.7 2.5-3.3 24.1s10.3-19.7 14.1-30.1Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_381-3)'
+						d='m227 282.3 9.8 9.5 6 6.5 1.3 5.5 5.4-3.4-.1-18.5 5-1.9-5.9-.7-21.5 3z'></path>
+				</g>
+
+				<g id='stone-3' fill-rule='evenodd'>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_214-4)'
+						d='m202.8 131.5 2 12.2s6.4 2.1 7.4 4.2 5.1 39.9 5.1 39.9l4.5 3.4s2.7 7 5 6.2 4.5-10.2 4.5-10.2l1-1.1a27 27 0 0 0 2-3.2c1-1.6 2.2-8 2.9-12.5l.7-5 11.3-2.3 1.4-2.8 9.4-5.7a106 106 0 0 0-.2-31.6 55 55 0 0 0-22-5.3c-4.4.4-13.5 3.4-14.6 3.8h-.2l-1.5 9c-7.5-2.3-18.7 1-18.7 1Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_467)'
+						d='m202.8 131.5 2 12.2s6.4 2.1 7.4 4.2 5.1 39.9 5.1 39.9l4.5 3.4s2.7 7 5 6.2 4.5-10.2 4.5-10.2l1-1.1-2.3-1.1-4.2 3.7-2-5-1-28 6.1 1.7 7.2 8.3 1.2 4.8.7-5 11.3-2.3 1.4-2.8 9.4-5.7-6.4 1-.9-6.5-2.2 9.8h-3l-6.6-1.8a51.2 51.2 0 0 1-2.7-6.6c-.6-2.3-2-17.1-2-17.1l-.6-13.5-3.6-1-8.9 2.5-1.7 9a41.6 41.6 0 0 0-18.7 1Z'
+						transform='translate(22.9)'></path>
+				</g>
+				<g id='stone-2' fill-rule='evenodd'>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_214-5)'
+						d='M298.9 173.8c1.2-.3 2-3 2.8-5.5v-.3l1-3c.8-2.4 1.8-8.1 0-9.4a4.7 4.7 0 0 0-4.9.1c-1.4.8-2.4 1.8-2.4 2.3-.2 1 1.8 16.4 3.5 15.8Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_219)'
+						d='M298.9 173.8c1.2-.3 2-3 2.8-5.5v-.3h-1.6l-1.5-2.1-.8-10.2c-1.4.7-2.4 1.8-2.4 2.3-.2 1 1.8 16.4 3.5 15.8Z'
+						transform='translate(22.9)'></path>
+				</g>
+
+				<g id='stone-1' fill-rule='evenodd'>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_441)'
+						d='M335.5 266.1v.2c-.1 1.3-1.5 12.4-2 15-.5 2.7-1.5 2.7-1.5 2.7s-2.8 7.7-5.2 9-10-.5-10-.5-9.6-7.2-11.2-25.3c0 0 9-4.4 15.3-4s14.6 3 14.6 3Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_437-2)'
+						d='M335.5 266.3c-.1 1.3-1.5 12.4-2 15-.5 2.7-1.5 2.7-1.5 2.7s-2.8 7.7-5.2 9-10-.5-10-.5-9.6-7.2-11.2-25.3c0 0 2.5 12.3 6.8 17.5s8.9 3.2 8.9 3.2l4.3-9.7 2.1-7.5 1.5-3.3 2 6.4-1 6.4h2.8Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='#a0ffed'
+						d='m328.5 267.1 8.3-.1 7.8-.7 10.3-.2 3.5.2s-8.8-3.5-13.9-4-16 4.8-16 4.8Z'></path>
+				</g>
+			</g>
 			<path
 				id='smoke'
 				fill='url(#Áåçûìÿííûé_ãðàäèåíò_296)'
@@ -890,116 +986,78 @@ const {className} = Astro.props
 				data-name='smoke'
 				style='mix-blend-mode:screen'
 				transform='translate(22.9)'></path>
-			<g id='stone-6' fill-rule='evenodd'>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_354)'
-					d='M105 297.2s-1 16.9 0 23.9c0 0 1.4 4 7.6 5.8v13.5s10.7 2.4 14.3-1.5 19-45.3 19-45.3l-18.6 2Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_214)'
-					d='M105 297.2s13-1 15.3-2.4l4.4-2.2 21.1 1a64 64 0 0 1-5.7 3.6c-2.8 1.5-16.1 2.4-21.8 2s-13.3-2-13.3-2Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_377)'
-					d='m105 321 6.7 1.3 3.6-1.2 2.3-14.1v14l1 5.3 6.6 2.5s4.5-2 5.3-5l6.4-25.7 9-4.5s-11.7 33.7-16.9 41.6l-3.9 6-11.9 2-1.5-4.3 1-12s-7.3-2-7.7-5.8Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='#a0ffed'
-					d='M143.2 294.8a77.5 77.5 0 0 0 8.3.7c2.3 0 7.2-.7 7.2-.7s-7.6-2.4-11-2.2c0 0-3.8 1-4.5 2.2Z'
-				></path>
-			</g>
-			<g id='plate-right' fill-rule='evenodd' transform='translate(100,16)'>
+
+			<g id='plate-right-top'>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_394)'
-					d='M582 293a89.7 89.7 0 0 0 5 9 45.5 45.5 0 0 0 4.1 5.3l-2 3.2-76.6 3.5-73 6.4a95.9 95.9 0 0 0 6 7.8 27.7 27.7 0 0 0 4 3.2s1.6 7.5 2.1 10.5a10.7 10.7 0 0 1-.8 5.9l3.2 10.5L558 380h66.5l135 12.8L900 400v-73l-127.5-18.4Z'
-					transform='translate(22.9)'></path>
+					d='m 624.5,380 135,1.8 L 900,400 V 327 L 772.5,308.6 582,293 c 1.5,3.1 3.2,6 5,9 1.2,1.9 2.6,3.6 4.1,5.3 l -2,3.2 z'
+					transform='translate(122.9,16)'></path>
+				<path
+					fill='url(#Áåçûìÿííûé_ãðàäèåíò_188)'
+					d='m 816.1,313.3 c 4.3,0.9 14.3,-1 19.1,0 m -0,-0 c 4.8,1 65,-2.6 65,-2.6 L 900.2,284.6 H 716.1 c -2.5,1.1 -5.2,1.9 -7.9,2.3 -3.3,0.3 -41.7,0.8 -47.1,0.8 -5.4,0 -20.1,-0.7 -29.3,0 -9.2,0.7 -21.1,1.2 -24.8,1.9 -3.7,0.7 -14.2,1.7 -18,2.4 -3.8,0.7 -8,0 -7,1 1,1 9.5,1.4 12.6,2.9 3.1,1.5 16.8,2.6 20,3.5 3.2,0.9 21,3.3 25,4.6 l 4.3,1.4 73.4,-0.1 c 5,1.3 94.5,7.1 98.8,8'
+					transform='translate(122.9,16)'></path>
+				<path
+					fill='url(#Áåçûìÿííûé_ãðàäèåíò_411)'
+					d='m666.5 305.3 46.4-.4 27.3.4 32.5 3 64.7 4.8h-80.5l-34.3-1.2-48.8-4.7-7.3-1.9z'
+					transform='translate(100,16)'></path>
+				<path
+					fill='url(#Áåçûìÿííûé_ãðàäèåíò_411-2)'
+					d='m857.5 313.3 65.4-2.1.2 7.3-65.6-5.2z'
+					transform='translate(100,16)'></path>
+				<path
+					fill='url(#Áåçûìÿííûé_ãðàäèåíò_305-6)'
+					d='m739 284.6 29.2 3.1 2.5 3-12.1-.9H737l-16.1-2.1 18.1-3.1z'
+					transform='translate(100,16)'></path>
+			</g>
+			<g id='plate-right' fill-rule='evenodd'>
+				<path
+					fill='url(#Áåçûìÿííûé_ãðàäèåíò_394)'
+					d='M 522.4,315 439.5,320.4 c 1.9,2.7 3.9,5.3 6,7.8 1.2,1.2 2.6,2.6 4,3.2 0,0 1.6,7.5 2.1,10.5 0.3,2 0,4 -0.8,5.9 l 3.2,10.5 104,21.7 h 66.5 l 135,12.8 L 900,400 V 327 C 770.4,337.4 631.9,308.4 522.4,315 Z'
+					transform='translate(122.9,16)'></path>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_476)'
 					d='M610.8 311s-6.4-3-10.4-3.5-108.3 3.3-114.5 3.5l-13.9-1s-2.8-3-5.6-2.6a20.5 20.5 0 0 0-5 1.8s-1 3.2-2 4-4.6 1.4-4.6 1.4L452 317l-4.5-2.9-4.9 3-3 3.4s7.4 1 9.7 1.6 37.8-1.5 48.3 0 22.2 1.5 23 2.3 11.7 3 15.7 2.6 44.2-6.5 44.2-6.5l23.2-4.8Z'
-					transform='translate(22.9)'></path>
+					transform='translate(122.9,16)'></path>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_188)'
-					d='M900.2 284.6H716.1a32.3 32.3 0 0 1-7.9 2.3c-3.3.3-41.7.8-47.1.8s-20.1-.7-29.3 0-21.1 1.2-24.8 1.9-14.2 1.7-18 2.4-8 0-7 1 9.5 1.4 12.6 2.9 16.8 2.6 20 3.5 21 3.3 25 4.6l7.4 2.4s-34.8 3.9-39.1 5.2l-8.3 2.4s-52.3 6.1-57.4 8-8.4 2.9-7.8 4.2 19.5 2.6 23.8 3 23.6-4.5 26.8-2.8 6.8 2.9 8.7 4.4 7.5.2 12.5 1.5 85.5 2.4 89.8 3.3 8.3 5 13.1 6S900 343 900 343Z'
-					transform='translate(22.9)'></path>
+					d='m 899.5,311.5 -59,2.4 c -2.5,1.1 -24.1,-1.3 -26.8,-0.8 -3.3,0.3 -73.0,-2.7 -78.4,-2.7 -5.4,0 -1.4,1.6 -10.6,2.4 -9.2,0.7 -28.7,-0.9 -32.4,-0.2 L 647,306.4 c 0,0 -34.8,3.9 -39.1,5.2 l -8.3,2.4 c 0,0 -52.3,6.1 -57.4,8 -5.1,1.9 -8.4,2.9 -7.8,4.2 0.6,1.3 19.5,2.6 23.8,3 4.3,0.4 23.6,-4.5 26.8,-2.8 3.2,1.7 6.8,2.9 8.7,4.4 1.9,1.5 7.5,0.2 12.5,1.5 5,1.3 85.5,2.4 89.8,3.3 4.3,0.9 8.3,5 13.1,6 4.8,1 190.9,1.4 190.9,1.4 z'
+					transform='translate(122.9,16)'></path>
 				<path
 					fill='url(#Áåçûìÿííûé_aðàäèåíò_406)'
 					d='m875.7 343.3 4.1 53.8-47.4 1.1-63-5.2-7.7-26-6-23.7-.7 25.6.7 17-10.7 11.2-26.3-5.6-9.7-49.8-13-6.1-4.7 27.7-5.5 2.4 2 13.8-30.5.9-44.7 1.5-6.4-49.6-3.9-.6 4.6 27.7-11.4-28-.7 37.7-4.5-20.2-9.4-.2.8-22.6-23.5 3.1 1.7 16.1-17.9 2.5-10-2.5-12.7-21.3-21-1 6.2 12.9 1.5 7.1 3.8 18.3-17.2-3.6-11-25.7-1-5.9-3.4-4.6-28 .5-9.8-1.6s4.6 6.6 6 7.8l4.1 3.2 9.2.7 6.4 4 4.7 6.9-9.7 2.4-3.7 2.6-5.2.7 2.4 7.4 15.7 7.2L588 389.5l140.4 11.9 151.3 1L900 400v-57Z'
-					transform='translate(22.9)'></path>
+					transform='translate(122.9,16)'></path>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_417)'
 					d='m523.5 347.8 5.3 30.6s16.5 6.3 23 7.6 14.2-3 14.2-3l12.1-1 8.3-5.7 3.8-27.4-20.7-.2Z'
-					transform='translate(22.9)'></path>
+					transform='translate(122.9,16)'></path>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_305)'
 					d='M523.5 347.8s20-7.6 22.8-7.4 11.9 0 11.9 0 7.4 3.3 12 3.7 20 4.8 20 4.8-10.6 1.7-14 1.7l1.4 2.2a71.4 71.4 0 0 1-18.8 0s-9.4-2-35.3-5Z'
-					transform='translate(22.9)'></path>
+					transform='translate(122.9,16)'></path>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_305-2)'
 					d='m451.6 344.9 7.8-1 4.6.5-3.9 1-3.7 2.6-5.2.7a3.5 3.5 0 0 1 .4-3.8Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_411)'
-					d='m666.5 305.3 46.4-.4 27.3.4 32.5 3 64.7 4.8h-80.5l-34.3-1.2-48.8-4.7-7.3-1.9z'></path>
+					transform='translate(122.9,16)'></path>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_305-3)'
 					d='m530.5 327.7 27.7 1.6a141.4 141.4 0 0 0 23.4-3.2l13.9 5.4 10.7.8 2 2.5 87.8.8 33.5-4.8 16.7-3 68.3-14.7-78.2-2.4-13.5 2.4-27.2-1.6-48.7-5.1s-33.1 3.8-39 5.2-46 7-46 7l-38.4 6.7s-.3 1.5 7 2.4Z'
-					transform='translate(22.9)'></path>
+					transform='translate(122.9,16)'></path>
 				<path
 					fill='#c2ffff'
 					d='m484.2 309.2 2.6 2 4.3-1 2-1-1.1-2s-5.5.2-7.8 2ZM476.7 315.5h3.6l2.6-2.1s-2.8-.9-6.2 2ZM470.3 314l-4.1 3.1 1 1.4h4.5l3.1-1.6-4.5-2.9z'
-				></path>
-				<path fill='url(#Áåçûìÿííûé_ãðàäèåíò_411-2)' d='m857.5 313.3 65.4-2.1.2 7.3-65.6-5.2z'
-				></path>
+					transform='translate(100,16)'></path>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_305-4)'
 					d='m778.6 343.3 22.7 2.1h11.1l23.2-1.1 11.5.6 15.7.5 6.5 3.9 14.7-.6 12.5-1.3 4.2-4.1 13.6-.8 8.6.5-57.6-5.5-30.4 2.9h-29l-27.3 2.9z'
-				></path>
+					transform='translate(100,16)'></path>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_305-5)'
 					d='m521.2 322.9 8-.8 5.7-1.1 9.1 1 13.2.9 15.6-2.5-26.4 4.9-3.8-.7-1.7.7-19.7-2.4z'
-				></path>
+					transform='translate(100,16)'></path>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_411-3)'
-					d='m718.9 335.6 15-2.2 18.5-2.6 20.4-3.9-26 3-37.2 5.2 6.9 12.7 2.4-12.2z'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_305-6)'
-					d='m739 284.6 29.2 3.1 2.5 3-12.1-.9H737l-16.1-2.1 18.1-3.1z'></path>
-			</g>
-			<g id='stone-5' fill-rule='evenodd'>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_354-2)'
-					d='M153.8 275s-2.9 14.2-2.6 17.6 6.8 11 6.8 11 6.9 14.6 9 21.8 9.6 16.4 9.6 16.4 44.3 6.9 56.4 6.9 18.2-5.7 18.2-5.7 17.1-29.7 18.6-31.1 10-4.5 10-4.5 13.8-25 15-31.6l-38.6 1.6Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_214-2)'
-					d='m153.8 275 18.2-2.2 10.5-1.8s50 .1 64.5 1c0 0 12-4.8 15.2-5s9.6 5.8 9.6 5.8l23 3s-10.5 3.7-18.6 3.5l7.7 2.6a15 15 0 0 1-4.9 2.4c-3 1-26 1.6-36.8 1.5s-15.7-3.9-15.7-3.9l5-1.9-5.9-.7s-17.8 3.1-24.6 3.4a86.3 86.3 0 0 1-15.5-1.5l-.7-2.3s-18.4-1.1-31-3.8Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_377-2)'
-					d='M180.5 278.5v10l-10 1.6s-.5.2-1.6 3-6.2 9.9-6.2 9.9l-4.6.5 3.7 8.3s5.3.1 7.5 1.4 6.9 5.3 6.9 5.3l2.8 7.8s2.8-14.4 3-16.7 3-12 2.5-13.7.2-8 .2-8l.8-6.8s14.5 2 16 2.6 2.2 6.6 2.2 6.6l5 11.4-5.6 16.7 2.2 14.2.7 10.6 7.9 8.5h6.2l5.5-29.4c.4-1.7-1.3-5.7-1.3-5.7l2.5-17.3-.3-17.5 5-1.9-5.9-.7s-18.5 2.8-21.5 3-18.6-2.5-18.6-2.5l9.3-2.3Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_377-3)'
-					d='m260.3 285.8 12.5 2-2 4.8-5.4 13-6.5 6.2-7.3 2.7-5.7 4h4.9l-.4 5.3-2.6 12.6-.2 9 3.4-.5s13.3-24.1 18.8-33c0 0 9-2.8 10-4.5s13.7-25.7 15-31.6l-18.6 3.5 7.7 2.6a47.1 47.1 0 0 1-9 3c-3.6.5-14.6.9-14.6.9Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_258-2)'
-					d='m247 272-4 2 4.6 1.1c1.6.4 11.1-.3 12.8-.7s7.8-2.4 7.8-2.4l.3-2s-4.6-4-6-3.8-13 4.6-15.5 5.8Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_372)'
-					d='m272.4 272.9-4 2.2-6 .1h-13s10-.8 11.5-1.2l7.3-2 .3-2Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_381)'
-					d='m203.4 288.4 4.2 9.9.7-18.6 9.4-2.3-14.3 1.1v9.9z'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_381-2)'
-					d='m276.2 279.3 7.7 2.5-3.3 24.1s10.3-19.7 14.1-30.1Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_381-3)'
-					d='m227 282.3 9.8 9.5 6 6.5 1.3 5.5 5.4-3.4-.1-18.5 5-1.9-5.9-.7-21.5 3z'></path>
+					d='m718.9 335.6 15-2.2 18.5-2.6 20.4-3.9-26 3-37.2 5.2 6.9 12.7 2.4-12.2z'
+					transform='translate(100,16)'></path>
 			</g>
 			<ellipse
 				id='glow-l'
@@ -1082,27 +1140,7 @@ const {className} = Astro.props
 					d='m119.3 227-2.8 6.4 3.4.9 2.7-1 .5-2.6s-1.8-2.8-3.8-3.6Z'
 					transform='translate(22.9)'></path>
 			</g>
-			<g id='stone-3' fill-rule='evenodd'>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_214-4)'
-					d='m202.8 131.5 2 12.2s6.4 2.1 7.4 4.2 5.1 39.9 5.1 39.9l4.5 3.4s2.7 7 5 6.2 4.5-10.2 4.5-10.2l1-1.1a27 27 0 0 0 2-3.2c1-1.6 2.2-8 2.9-12.5l.7-5 11.3-2.3 1.4-2.8 9.4-5.7a106 106 0 0 0-.2-31.6 55 55 0 0 0-22-5.3c-4.4.4-13.5 3.4-14.6 3.8h-.2l-1.5 9c-7.5-2.3-18.7 1-18.7 1Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_467)'
-					d='m202.8 131.5 2 12.2s6.4 2.1 7.4 4.2 5.1 39.9 5.1 39.9l4.5 3.4s2.7 7 5 6.2 4.5-10.2 4.5-10.2l1-1.1-2.3-1.1-4.2 3.7-2-5-1-28 6.1 1.7 7.2 8.3 1.2 4.8.7-5 11.3-2.3 1.4-2.8 9.4-5.7-6.4 1-.9-6.5-2.2 9.8h-3l-6.6-1.8a51.2 51.2 0 0 1-2.7-6.6c-.6-2.3-2-17.1-2-17.1l-.6-13.5-3.6-1-8.9 2.5-1.7 9a41.6 41.6 0 0 0-18.7 1Z'
-					transform='translate(22.9)'></path>
-			</g>
-			<g id='stone-2' fill-rule='evenodd'>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_214-5)'
-					d='M298.9 173.8c1.2-.3 2-3 2.8-5.5v-.3l1-3c.8-2.4 1.8-8.1 0-9.4a4.7 4.7 0 0 0-4.9.1c-1.4.8-2.4 1.8-2.4 2.3-.2 1 1.8 16.4 3.5 15.8Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_219)'
-					d='M298.9 173.8c1.2-.3 2-3 2.8-5.5v-.3h-1.6l-1.5-2.1-.8-10.2c-1.4.7-2.4 1.8-2.4 2.3-.2 1 1.8 16.4 3.5 15.8Z'
-					transform='translate(22.9)'></path>
-			</g>
-			<g id='plate-l'>
+			<g id='plate-left'>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_367)'
 					fill-rule='evenodd'
@@ -1375,24 +1413,22 @@ const {className} = Astro.props
 					d='M589.6 208.4a.2.2 0 0 1 0 .2.2.2 0 0 1-.2 0 .2.2 0 0 1 0-.2.2.2 0 0 1 .2 0ZM596 222.3a.3.3 0 1 1-.4 0 .3.3 0 0 1 .4 0ZM589.4 202.4a.3.3 0 1 1-.4.5.3.3 0 0 1 0-.5.3.3 0 0 1 .4 0ZM589.4 206.7a.3.3 0 0 1 0 .4.3.3 0 0 1-.4 0 .3.3 0 1 1 .4-.4ZM684.9 275.7a.5.5 0 0 1 0 .8.5.5 0 0 1-.7 0 .5.5 0 1 1 .7-.8ZM679.5 277a.5.5 0 0 1 .1.8.6.6 0 0 1-.7 0 .5.5 0 0 1 0-.7.5.5 0 0 1 .6 0ZM680.7 276.2a.3.3 0 0 1 0 .4.3.3 0 0 1-.4-.4.3.3 0 0 1 .4 0ZM681 277.6a.2.2 0 0 1 0 .2.2.2 0 0 1-.3-.3.2.2 0 0 1 .3 0ZM684 273ZM679.8 276.9v.1-.1ZM681.1 276.4h-.1.1ZM681 273.1a.2.2 0 0 1 0 .3.2.2 0 0 1-.3-.3.2.2 0 0 1 .3 0ZM681 275.4a.2.2 0 0 1 0 .3.2.2 0 0 1-.2 0 .2.2 0 1 1 .2-.3ZM581.1 211.2a.3.3 0 0 1 0 .4.3.3 0 0 1-.4 0 .3.3 0 0 1 0-.4.3.3 0 0 1 .4 0Z'
 				></path>
 			</g>
-			<g id='stone-1' fill-rule='evenodd'>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_441)'
-					d='M335.5 266.1v.2c-.1 1.3-1.5 12.4-2 15-.5 2.7-1.5 2.7-1.5 2.7s-2.8 7.7-5.2 9-10-.5-10-.5-9.6-7.2-11.2-25.3c0 0 9-4.4 15.3-4s14.6 3 14.6 3Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_437-2)'
-					d='M335.5 266.3c-.1 1.3-1.5 12.4-2 15-.5 2.7-1.5 2.7-1.5 2.7s-2.8 7.7-5.2 9-10-.5-10-.5-9.6-7.2-11.2-25.3c0 0 2.5 12.3 6.8 17.5s8.9 3.2 8.9 3.2l4.3-9.7 2.1-7.5 1.5-3.3 2 6.4-1 6.4h2.8Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='#a0ffed'
-					d='m328.5 267.1 8.3-.1 7.8-.7 10.3-.2 3.5.2s-8.8-3.5-13.9-4-16 4.8-16 4.8Z'></path>
-			</g>
 		</g>
 	</g>
 </svg>
 
 <style>
+	/* #plate-left,
+	#rock-l {
+		animation: floating 12s infinite ease-in-out alternate;
+	} */
+	#plate-right {
+		animation: floating 12s infinite ease-in-out alternate;
+	}
+	#plate-right-top {
+		animation: floating 12s 1s infinite ease-in-out alternate;
+	}
+
 	#stone-1 {
 		animation: floating 6s infinite ease-in-out alternate;
 	}
