--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -4,7 +4,7 @@
 <meta name='generator' content={Astro.generator} />
 
 <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-<link rel='alternate icon' type='image/x-icon' href='/favicon.ico' />
+<link rel='alternate icon' type='image/x-icon' href='/favicon.svg' />
 <!-- <link rel="sitemap" href="/sitemap.xml" /> -->
 
 <!-- <script defer src="/_vercel/insights/script.js"></script> -->
