:dizzy: intensify floating movement

--- a/src/assets/landscape.astro
+++ b/src/assets/landscape.astro
@@ -1463,16 +1463,16 @@ const {className} = Astro.props
 			transform: translateY(0);
 		}
 		30% {
-			transform: translateY(-6px);
+			transform: translateY(-2%);
 		}
 		40% {
-			transform: translateY(-3px);
+			transform: translateY(-1%);
 		}
 		75% {
-			transform: translateY(-12px);
+			transform: translateY(-5%);
 		}
 		100% {
-			transform: translate3d(-8px);
+			transform: translate3d(-3%);
 		}
 	}
 </style>
