:triangular_flag_on_post: add label on social links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -136,7 +136,7 @@ import SocialLink from 'assets/social-link.astro'
 					bgClass='w-24'
 					delay='0s'
 					href='https://github.com/riolly'
-					aria-label='github'
+					label='Github'
 					target='_blank'
 				>
 					<svg xmlns='http://www.w3.org/2000/svg' class='w-full' viewBox='0 0 98 96'>
@@ -155,7 +155,7 @@ import SocialLink from 'assets/social-link.astro'
 					bgClass='w-20'
 					delay='0.1s'
 					href='https://linkedin.com/in/riolly'
-					aria-label='linkedin'
+					label='LinkedIn'
 					target='_blank'
 				>
 					<svg xmlns='http://www.w3.org/2000/svg' class='w-full' viewBox='0 0 448 512'>
@@ -172,7 +172,7 @@ import SocialLink from 'assets/social-link.astro'
 					class='-rotate-6'
 					bgClass='w-[4.5rem]'
 					delay='0.2s'
-					aria-label='twitter'
+					label='Twitter'
 					href='https://twitter.com/bertoriolly'
 					target='_blank'
 				>
@@ -191,7 +191,7 @@ import SocialLink from 'assets/social-link.astro'
 					bgClass='w-16'
 					delay='0.3s'
 					href='https://youtube.com/@riolly'
-					aria-label='youtube'
+					label='Youtube'
 					target='_blank'
 				>
 					<svg xmlns='http://www.w3.org/2000/svg' class='w-full' viewBox='0 0 576 512'>
@@ -209,7 +209,7 @@ import SocialLink from 'assets/social-link.astro'
 					bgClass='w-14'
 					delay='0.4s'
 					href='https://instagram.com/bertoriolly'
-					aria-label='instagram'
+					label='Instagram'
 					target='_blank'
 				>
 					<svg xmlns='http://www.w3.org/2000/svg' class='w-full' viewBox='0 0 448 512'>
