--- a/src/assets/social-link.astro
+++ b/src/assets/social-link.astro
@@ -5,9 +5,10 @@ interface Props extends HTMLAttributes<'a'> {
 	class?: string
 	bgClass?: string
 	delay?: string
+	label: string
 }
 
-const {class: className, bgClass, delay = '0s', ...props} = Astro.props
+const {class: className, bgClass, label, delay = '0s', ...props} = Astro.props
 ---
 
 <a
@@ -192,6 +193,7 @@ const {class: className, bgClass, delay = '0s', ...props} = Astro.props
 	<div class='absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2'>
 		<slot />
 	</div>
+	<p class='absolute left-1/2 -translate-x-1/2 text-center'>{label}</p>
 </a>
 
 <style lang='scss' define:vars={{delay}}>
