:coffin: remove unused code

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -225,9 +225,9 @@ import SocialLink from 'assets/social-link.astro'
 </Layout>
 
 <script>
-	const sectionIntro = document.querySelector('section#intro') as HTMLElement
+	// const sectionIntro = document.querySelector('section#intro') as HTMLElement
 	const sectionContact = document.querySelector('section#contact') as HTMLElement
-	const astronaut = document.querySelector('div.astronaut') as HTMLButtonElement
+	// const astronaut = document.querySelector('div.astronaut') as HTMLButtonElement
 	const astronautContainer = document.querySelector(
 		'button.astronaut-container'
 	) as HTMLButtonElement
