--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -133,7 +133,7 @@ import SocialLink from 'assets/social-link.astro'
 			<div class='link link--github absolute top-[16%] left-[20%]'>
 				<SocialLink
 					class='-rotate-3'
-					bgClass='w-24'
+					bgClass='w-24 md:w-32 lg:w-46'
 					delay='0s'
 					href='https://github.com/riolly'
 					label='Github'
@@ -149,10 +149,10 @@ import SocialLink from 'assets/social-link.astro'
 				</SocialLink>
 			</div>
 
-			<div class='link link-linkedin absolute top-[26%] right-[14%]'>
+			<div class='link link-linkedin absolute top-[26%] right-[10%] xl:right-[14%]'>
 				<SocialLink
 					class='rotate-6'
-					bgClass='w-20'
+					bgClass='w-20 md:w-28 lg:w-32'
 					delay='0.1s'
 					href='https://linkedin.com/in/riolly'
 					label='LinkedIn'
@@ -167,10 +167,12 @@ import SocialLink from 'assets/social-link.astro'
 				</SocialLink>
 			</div>
 
-			<div class='link link--twitter absolute top-[44%] right-[28%]'>
+			<div
+				class='link link--twitter absolute top-[44%] right-[28%] md:top-[48%] lg:right-[36%] xl:right-[40%] xl:top-[40%]'
+			>
 				<SocialLink
 					class='-rotate-6'
-					bgClass='w-[4.5rem]'
+					bgClass='w-[4.5rem] md:w-24 lg:w-28'
 					delay='0.2s'
 					label='Twitter'
 					href='https://twitter.com/bertoriolly'
@@ -185,10 +187,12 @@ import SocialLink from 'assets/social-link.astro'
 				</SocialLink>
 			</div>
 
-			<div class='link link--youtube absolute top-[56%] left-[20%]'>
+			<div
+				class='link link--youtube absolute top-[56%] left-[20%] md:top-[64%] lg:left-[28%] xl:left-[36%]'
+			>
 				<SocialLink
 					class='rotate-2'
-					bgClass='w-16'
+					bgClass='w-16 md:w-20 lg:w-24'
 					delay='0.3s'
 					href='https://youtube.com/@riolly'
 					label='Youtube'
@@ -203,10 +207,12 @@ import SocialLink from 'assets/social-link.astro'
 				</SocialLink>
 			</div>
 
-			<div class='link link--instagram absolute top-[70%] right-[14%]'>
+			<div
+				class='link link--instagram absolute top-[70%] right-[14%] md:top-[74%] md:right-[18%] lg:top-[70%] xl:right-[28%]'
+			>
 				<SocialLink
-					class='rotate-6'
-					bgClass='w-14'
+					class='-rotate-6'
+					bgClass='w-14 md:w-16 lg:w-20'
 					delay='0.4s'
 					href='https://instagram.com/bertoriolly'
 					label='Instagram'
