:alembic: twink effect on animation fps

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -423,23 +423,23 @@ import SocialLink from 'assets/social-link.astro'
 		}
 	}
 
-	@keyframes move-twink {
-		from {
-			background-position: 0 0;
-		}
-		to {
-			background-position: -10000px 5000px;
-		}
-	}
+	// @keyframes move-twnk {
+	// 	from {i
+	// 		background-position: 0 0;
+	// 	}
+	// 	to {
+	// 		background-position: -10000px 5000px;
+	// 	}
+	// }
 
-	@keyframes move-cloud {
-		from {
-			background-position: 0 60px;
-		}
-		to {
-			background-position: 10000px 60px;
-		}
-	}
+	// @keyframes move-cloud {
+	// 	from {
+	// 		background-position: 0 60px;
+	// 	}
+	// 	to {
+	// 		background-position: 10000px 60px;
+	// 	}
+	// }
 
 	@keyframes wobbleY {
 		0% {
