--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,7 +76,7 @@ import SocialLink from 'assets/social-link.astro'
 						</div>
 						<DialogBox className='absolute h-full rotateInDownRight origin-bottom-right' />
 						<div
-							class='absolute top-1 left-4 w-24 -rotate-2 group-hover:left-5 group-hover:top-5 md:top-1.5 md:left-5'
+							class='absolute top-1 left-4 w-24 -rotate-2 group-hover:top-4 md:top-1.5 md:left-5'
 						>
 							<p class='text-bold font-head text-2xl leading-5'>
 								<span
@@ -88,7 +88,7 @@ import SocialLink from 'assets/social-link.astro'
 						</div>
 					</div>
 
-					<RocketAstronaut className='h-60 md:h-64 lg:72 xl:h-80 2xl:h-84 w-full' />
+					<RocketAstronaut className='h-56 md:h-64 lg:72 xl:h-80 2xl:h-84 w-full' />
 				</div>
 			</button>
 		</div>
