:pencil2: tighten text line height

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,7 +88,7 @@ import SocialLink from 'assets/social-link.astro'
 						</div>
 					</div>
 
-					<RocketAstronaut className='h-56 md:h-64 lg:72 xl:h-80 2xl:h-84 w-full' />
+					<RocketAstronaut className='h-60 md:h-64 lg:72 xl:h-80 2xl:h-84 w-full' />
 				</div>
 			</button>
 		</div>
@@ -105,7 +105,7 @@ import SocialLink from 'assets/social-link.astro'
 			class='mx-auto flex h-screen max-w-screen-md flex-col justify-center p-4 pr-2 md:px-8 md:pr-0 lg:px-0'
 		>
 			<h1
-				class='-mt-8 text-5xl font-bold leading-tight md:text-6xl md:leading-tight xl:text-7xl xl:leading-tight'
+				class='-mt-8 text-5xl font-bold leading-[1.1] md:text-6xl md:leading-tight xl:text-7xl xl:leading-tight'
 			>
 				<span class='lightSpeed0'>Web keep <span class='lightSpeed1'>evolving..</span></span>
 				<span class='lightSpeed2 block italic'>
@@ -118,7 +118,7 @@ import SocialLink from 'assets/social-link.astro'
 				</span>
 			</h1>
 
-			<p class='mt-4 text-lg leading-6 md:mt-6 md:text-xl 2xl:text-2xl'>
+			<p class='mt-4 text-lg leading-5 md:mt-6 md:text-xl md:leading-6 2xl:text-2xl'>
 				<span style='--n:142' class='type-desc'>
 					It will keep expanding like the <span class='font-semibold italic'>galaxy.</span>
 					<br />
