--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import SocialLink from 'assets/social-link.astro'
 	<div class='absolute h-fit w-full overflow-clip'>
 		<div class='stars absolute h-0.5 w-0.5 rounded-full'></div>
 		<div class='stars-big absolute h-1 w-1 rounded-full'></div>
-		<div class='twink absolute h-full w-full'></div>
+		<div class='twink absolute -left-1/4 -top-1/4 h-[125%] w-[125%]'></div>
 
 		<!-- <div
 			class='cloud absolute h-full w-full bg-repeat-x opacity-60 md:mt-20 md:[background-size:150%] lg:mt-0 xl:[background-size:125%] 2xl:[background-size:110%]'
@@ -318,7 +318,7 @@ import SocialLink from 'assets/social-link.astro'
 	}
 
 	.twink {
-		animation: move-twink 300s linear infinite;
+		animation: move-twink 12s linear infinite alternate;
 		background-image: url(/images/twink.svg);
 	}
 	.cloud {
@@ -462,23 +462,14 @@ import SocialLink from 'assets/social-link.astro'
 		}
 	}
 
-	// @keyframes move-twnk {
-	// 	from {
-	// 		background-position: 0 0;
-	// 	}
-	// 	to {
-	// 		background-position: -10000px 5000px;
-	// 	}
-	// }
-
-	// @keyframes move-cloud {
-	// 	from {
-	// 		background-position: 0 60px;
-	// 	}
-	// 	to {
-	// 		background-position: 10000px 60px;
-	// 	}
-	// }
+	@keyframes move-twink {
+		from {
+			transform: translate(0);
+		}
+		to {
+			transform: translate3d(20%, 10%, 0);
+		}
+	}
 
 	@keyframes wobbleY {
 		0% {
