--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import SocialLink from 'assets/social-link.astro'
 		> 
 		</div> -->
 		<div class='relative h-[100lvh] w-full'>
-			<div class='stars-shine absolute h-full w-full bg-cover'></div>
+			<!-- <div class='stars-shine absolute h-full w-full bg-cover'></div> -->
 
 			<EarthSvg
 				className='h-[28rem] md:h-[36rem] lg:h-[40rem] xl:h-[48rem] 2xl:h-[52rem] -rotate-90 absolute top-0 left-0 -translate-x-1/2 2xl:ml-20 -translate-y-1/2'
@@ -321,13 +321,13 @@ import SocialLink from 'assets/social-link.astro'
 		animation: move-twink 12s linear infinite alternate;
 		background-image: url(/images/twink.svg);
 	}
-	.cloud {
-		animation: move-cloud 200s linear infinite;
-		background-image: url(/images/cloud.png);
-	}
-	.stars-shine {
-		background-image: url(/images/stars-shine.svg);
-	}
+	// .cloud {
+	// 	animation: move-cloud 200s linear infinite;
+	// 	background-image: url(/images/cloud.png);
+	// }
+	// .stars-shine {
+	// 	background-image: url(/images/stars-shine.svg);
+	// }
 
 	.lightSpeed0 {
 		animation: lightSpeed $duration-0 $delay-0 ease-out backwards;
@@ -391,7 +391,7 @@ import SocialLink from 'assets/social-link.astro'
 				wobbleX $duration-4 $delay-4 alternate ease-in-out infinite;
 		}
 		&__ignite {
-			animation: wobbleX 0.75s alternate ease-in-out infinite;
+			animation: wobbleX 0.5s alternate ease-in-out infinite;
 		}
 		&__launch {
 			animation: scale 2s ease-out forwards, goingX 2s cubic-bezier(0.36, 0.73, 0.8, 0.97) forwards;
