:lipstick: pov blur on planet landscpe

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,6 +95,10 @@ import StarsShine from 'assets/stars-shine.astro'
 		</div>
 		<div class='relative h-[100lvh] w-full'>
 			<div class='absolute bottom-0 w-full'>
+				<div
+					class='absolute bottom-0 h-1/3 w-full bg-gradient-to-b from-transparent to-slate-900/75'
+				>
+				</div>
 				<PlanetLandscape className='w-[1000px] h-[450px] -ml-[95%] md:ml-0 md:w-full md:h-auto' />
 			</div>
 		</div>
