:bug: fix: big stars shine on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import StarsShine from 'assets/stars-shine.astro'
 		> 
 		</div> -->
 		<div class='relative h-[100lvh] w-full'>
-			<StarsShine className='w-full' />
+			<StarsShine className='min-w-[1536px]' />
 
 			<EarthSvg
 				className='h-[28rem] md:h-[36rem] lg:h-[40rem] xl:h-[48rem] 2xl:h-[52rem] -rotate-90 absolute top-0 left-0 -translate-x-1/2 2xl:ml-20 -translate-y-1/2'
