--- a/src/assets/earth.astro
+++ b/src/assets/earth.astro
@@ -1,9 +1,5 @@
 ---
-export type Props = {
-	className?: string
-}
-
-const {className} = Astro.props
+const {class: className} = Astro.props
 ---
 
 <svg
