--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,11 +32,6 @@ const desc =
 			>
 			</div>
 			<div
-				id='purple-gradient-tr'
-				class='absolute bottom-0 right-0 h-1/3 w-full translate-y-full bg-gradient-to-tr from-transparent via-transparent to-indigo-900/80 md:w-3/4 lg:w-1/2 xl:h-1/4'
-			>
-			</div>
-			<div
 				id='blackhole'
 				class='absolute top-1/2 left-1/2 -ml-12 mt-4 h-fit w-[175%] -translate-y-1/2 -translate-x-1/2 overflow-clip md:-ml-40 md:w-[120%] lg:-ml-32 lg:w-[92%] xl:-ml-24 xl:w-[80%] 2xl:-ml-20 2xl:w-[60%]'
 			>
@@ -91,6 +86,11 @@ const desc =
 			</button>
 		</div>
 		<div id='bg-section-blog' class='relative h-[100lvh]'>
+			<div
+				id='purple-gradient-tr'
+				class='absolute right-0 h-1/3 w-full bg-gradient-to-tr from-transparent via-transparent to-indigo-900/80 md:w-3/4 lg:w-1/2 xl:h-1/4'
+			>
+			</div>
 		</div>
 
 		<div id='bg-section-contact' class='relative h-[100lvh]'>
