--- a/src/assets/earth.astro
+++ b/src/assets/earth.astro
@@ -134,7 +134,7 @@ const {class: className} = Astro.props
 			gradientTransform='rotate(58 4462 540)'
 			gradientUnits='userSpaceOnUse'
 		>
-			<stop offset='0' stop-color='#f17438'></stop>
+			<stop offset='0' stop-color='#30633f'></stop>
 			<stop offset='1' stop-color='#00394a'></stop>
 		</radialGradient>
 		<radialGradient
@@ -152,7 +152,7 @@ const {class: className} = Astro.props
 			gradientTransform='rotate(58 4462 540)'
 			gradientUnits='userSpaceOnUse'
 		>
-			<stop offset='0' stop-color='#947438'></stop>
+			<stop offset='0' stop-color='#26c54e'></stop>
 			<stop offset='1' stop-color='#00394a'></stop>
 		</radialGradient>
 		<radialGradient
