--- a/src/assets/stars-shine.astro
+++ b/src/assets/stars-shine.astro
@@ -162,43 +162,29 @@ const {class: className} = Astro.props
 
 <style>
 	#star-1 {
-		animation: star-blinking 4s infinite ease-in-out backwards;
+		animation: star-blinking 1.5s infinite ease-in-out backwards alternate;
 	}
 	#star-2 {
-		animation: star-blinking 4s 1s infinite ease-in-out backwards;
+		animation: star-blinking 1.5s 0.4s infinite ease-in-out backwards alternate;
 	}
 	#star-3 {
-		animation: star-blinking 4s 3s infinite ease-in-out backwards;
+		animation: star-blinking 1.5s 1s infinite ease-in-out backwards alternate;
 	}
 	#star-4 {
-		animation: star-blinking 4s 2s infinite ease-in-out backwards;
+		animation: star-blinking 1.5s 0.8s infinite ease-in-out backwards alternate;
 	}
 	#star-5 {
-		animation: star-blinking 4s infinite ease-in-out backwards;
+		animation: star-blinking 1.5s 0.2s infinite ease-in-out backwards alternate;
 	}
 
 	@keyframes star-blinking {
-		0% {
-			opacity: 0;
-		}
+		0%,
 		20% {
-			opacity: 0.6;
-		}
-		30% {
-			opacity: 0.4;
-		}
-		40%,
-		60% {
-			opacity: 1;
-		}
-		70% {
-			opacity: 0.5;
-		}
-		70% {
-			opacity: 0.8;
-		}
-		100% {
 			opacity: 0;
+		}
+		80%,
+		100% {
+			opacity: 1;
 		}
 	}
 </style>
