:lipstick: stars opacity

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,10 +15,10 @@ const desc =
 <Layout title={title} description={desc}>
 	<div id='background' class='absolute h-fit w-full overflow-clip'>
 		<div
-			class='stars absolute right-0 bottom-[12.5%] h-0.5 w-0.5 origin-top-left rotate-180 rounded-full'
+			class='stars absolute right-0 bottom-[12.5%] h-0.5 w-0.5 origin-top-left rotate-180 rounded-full opacity-50'
 		>
 		</div>
-		<div class='stars absolute h-1 w-1 rounded-full'></div>
+		<div class='stars absolute h-1 w-1 rounded-full opacity-75'></div>
 		<div class='twink absolute -left-1/4 -top-1/4 h-[125%] w-[125%]'></div>
 
 		<div id='bg-section-intro' class='relative h-[100lvh]'>
